--- a/testsuite/unit/Makefile.in
+++ b/testsuite/unit/Makefile.in
@@ -124,11 +124,14 @@ am__fwdpp_unit_tests_SOURCES_DIST = fwdpp_unit_tests.cc mutateTest.cc \
 fwdpp_unit_tests_OBJECTS = $(am_fwdpp_unit_tests_OBJECTS)
 fwdpp_unit_tests_LDADD = $(LDADD)
 am__sugar_unit_tests_SOURCES_DIST = sugar_unit_tests.cc \
-	sugar_GSLrngTest.cc sugar_samplingTest.cc
+	sugar_GSLrngTest.cc sugar_samplingTest.cc \
+	sugar_add_mutationTest.cc sugar_change_neutralTest.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@am_sugar_unit_tests_OBJECTS =  \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_unit_tests.$(OBJEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_GSLrngTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_samplingTest.$(OBJEXT)
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_samplingTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_add_mutationTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_change_neutralTest.$(OBJEXT)
 sugar_unit_tests_OBJECTS = $(am_sugar_unit_tests_OBJECTS)
 sugar_unit_tests_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
@@ -494,7 +497,9 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_LIB_PRESENT_TRUE@extensions_unit_tests_SOURCES = extensions_unit_test.cc extensions_regionsTest.cc extensions_callbacksTest.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@sugar_unit_tests_SOURCES = sugar_unit_tests.cc \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_GSLrngTest.cc \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_samplingTest.cc
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_samplingTest.cc \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_add_mutationTest.cc \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_change_neutralTest.cc	
 
 @BUNIT_TEST_LIB_PRESENT_TRUE@AM_CXXFLAGS = 
 @BUNIT_TEST_LIB_PRESENT_TRUE@AM_LIBS = -lboost_unit_test_framework
@@ -563,6 +568,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/recombinationTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/siteDepFitnessTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_GSLrngTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_add_mutationTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_change_neutralTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_samplingTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_unit_tests.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/type_traitsTest.Po@am__quote@
