--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -9,6 +9,7 @@ check_PROGRAMS=	diploid_ind \
 	migsel_split_ind_list \
 	bneck_selection_ind \
 	diploid_ind_2locus \
+	diploid_ind_Kloci \
 	HOC_ind 
 
 #	migsel_split_ind 
@@ -21,6 +22,7 @@ migsel_ind_SOURCES=migsel_ind.cc common_ind.hpp
 migsel_split_ind_list_SOURCES=migsel_split_ind_list.cc common_ind.hpp
 bneck_selection_ind_SOURCES=bneck_selection_ind.cc common_ind.hpp
 diploid_ind_2locus_SOURCES=diploid_ind_2locus.cc common_ind.hpp
+diploid_ind_Kloci_SOURCES=diploid_ind_Kloci.cc common_ind.hpp
 HOC_ind_SOURCES=HOC_ind.cc
 
 AM_CPPFLAGS=-Wall -W -I.
