--- a/.travis.yml
+++ b/.travis.yml
@@ -9,21 +9,21 @@ language: cpp
 
 compiler:
   - gcc
-  - clang
+#  - clang
 
 install:
  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
- - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.6" CC="clang-3.6"; fi
+# - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.6" CC="clang-3.6"; fi
 
 addons:
   apt:
     sources:
-    - llvm-toolchain-precise-3.6
+#    - llvm-toolchain-precise-3.6
     - ubuntu-toolchain-r-test
     packages:
     - gcc-4.9
     - g++-4.9
-    - clang-3.6
+#    - clang-3.6
     - zlib1g
     - zlib1g-dev
     - libboost-test-dev
