new example program added

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -10,6 +10,7 @@ check_PROGRAMS=	diploid_ind \
 	bneck_selection_ind \
 	diploid_ind_2locus \
 	K_linked_regions_multilocus \
+	K_linked_regions_extensions \
 	HOC_ind 
 
 #	migsel_split_ind 
@@ -23,6 +24,7 @@ migsel_split_ind_list_SOURCES=migsel_split_ind_list.cc common_ind.hpp
 bneck_selection_ind_SOURCES=bneck_selection_ind.cc common_ind.hpp
 diploid_ind_2locus_SOURCES=diploid_ind_2locus.cc common_ind.hpp
 K_linked_regions_multilocus_SOURCES=K_linked_regions_multilocus.cc common_ind.hpp
+K_linked_regions_extensions_SOURCES=K_linked_regions_extensions.cc common_ind.hpp
 HOC_ind_SOURCES=HOC_ind.cc
 
 AM_CPPFLAGS=-Wall -W -I.
