--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -94,6 +94,7 @@ POST_UNINSTALL = :
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	bneck_selection_ind$(EXEEXT) \
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	diploid_ind_2locus$(EXEEXT) \
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	K_linked_regions_multilocus$(EXEEXT) \
+@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	K_linked_regions_extensions$(EXEEXT) \
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	HOC_ind$(EXEEXT)
 @DEBUG_FALSE@@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am__append_1 = -DNDEBUG
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am__append_2 = $(AM_LIBS)
@@ -113,6 +114,13 @@ am__HOC_ind_SOURCES_DIST = HOC_ind.cc
 HOC_ind_OBJECTS = $(am_HOC_ind_OBJECTS)
 HOC_ind_LDADD = $(LDADD)
 HOC_ind_DEPENDENCIES =
+am__K_linked_regions_extensions_SOURCES_DIST =  \
+	K_linked_regions_extensions.cc common_ind.hpp
+@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_K_linked_regions_extensions_OBJECTS = K_linked_regions_extensions.$(OBJEXT)
+K_linked_regions_extensions_OBJECTS =  \
+	$(am_K_linked_regions_extensions_OBJECTS)
+K_linked_regions_extensions_LDADD = $(LDADD)
+K_linked_regions_extensions_DEPENDENCIES =
 am__K_linked_regions_multilocus_SOURCES_DIST =  \
 	K_linked_regions_multilocus.cc common_ind.hpp
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am_K_linked_regions_multilocus_OBJECTS = K_linked_regions_multilocus.$(OBJEXT)
@@ -207,13 +215,15 @@ AM_V_CCLD = $(am__v_CCLD_@AM_V@)
 am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
 am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
-SOURCES = $(HOC_ind_SOURCES) $(K_linked_regions_multilocus_SOURCES) \
+SOURCES = $(HOC_ind_SOURCES) $(K_linked_regions_extensions_SOURCES) \
+	$(K_linked_regions_multilocus_SOURCES) \
 	$(bneck_selection_ind_SOURCES) $(diploid_binaryIO_ind_SOURCES) \
 	$(diploid_fixed_sh_ind_SOURCES) \
 	$(diploid_gzbinaryIO_ind_SOURCES) $(diploid_ind_SOURCES) \
 	$(diploid_ind_2locus_SOURCES) $(migsel_ind_SOURCES) \
 	$(migsel_split_ind_list_SOURCES)
 DIST_SOURCES = $(am__HOC_ind_SOURCES_DIST) \
+	$(am__K_linked_regions_extensions_SOURCES_DIST) \
 	$(am__K_linked_regions_multilocus_SOURCES_DIST) \
 	$(am__bneck_selection_ind_SOURCES_DIST) \
 	$(am__diploid_binaryIO_ind_SOURCES_DIST) \
@@ -353,6 +363,7 @@ top_srcdir = @top_srcdir@
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@bneck_selection_ind_SOURCES = bneck_selection_ind.cc common_ind.hpp
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@diploid_ind_2locus_SOURCES = diploid_ind_2locus.cc common_ind.hpp
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@K_linked_regions_multilocus_SOURCES = K_linked_regions_multilocus.cc common_ind.hpp
+@HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@K_linked_regions_extensions_SOURCES = K_linked_regions_extensions.cc common_ind.hpp
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@HOC_ind_SOURCES = HOC_ind.cc
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@AM_CPPFLAGS = -Wall \
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@	-W -I. \
@@ -400,6 +411,10 @@ HOC_ind$(EXEEXT): $(HOC_ind_OBJECTS) $(HOC_ind_DEPENDENCIES) $(EXTRA_HOC_ind_DEP
 	@rm -f HOC_ind$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(HOC_ind_OBJECTS) $(HOC_ind_LDADD) $(LIBS)
 
+K_linked_regions_extensions$(EXEEXT): $(K_linked_regions_extensions_OBJECTS) $(K_linked_regions_extensions_DEPENDENCIES) $(EXTRA_K_linked_regions_extensions_DEPENDENCIES) 
+	@rm -f K_linked_regions_extensions$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(K_linked_regions_extensions_OBJECTS) $(K_linked_regions_extensions_LDADD) $(LIBS)
+
 K_linked_regions_multilocus$(EXEEXT): $(K_linked_regions_multilocus_OBJECTS) $(K_linked_regions_multilocus_DEPENDENCIES) $(EXTRA_K_linked_regions_multilocus_DEPENDENCIES) 
 	@rm -f K_linked_regions_multilocus$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(K_linked_regions_multilocus_OBJECTS) $(K_linked_regions_multilocus_LDADD) $(LIBS)
@@ -443,6 +458,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/HOC_ind.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/K_linked_regions_extensions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/K_linked_regions_multilocus.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bneck_selection_ind.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_binaryIO_ind.Po@am__quote@
