testsuite/integration now gets build.  Reran automake/autoconf

--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -263,6 +263,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+runstatedir = @runstatedir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
@@ -271,7 +272,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = unit
+SUBDIRS = unit integration
 all: all-recursive
 
 .SUFFIXES:
