--- a/Makefile.in
+++ b/Makefile.in
@@ -287,6 +287,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+runstatedir = @runstatedir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
@@ -296,7 +297,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = fwdpp examples unit experimental_examples src
+SUBDIRS = fwdpp examples testsuite experimental_examples src
 ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/*.hpp experimental_examples/*.cc python_examples/*.cc python_examples/*.py LICENSE experimental_examples/*.cc
 all: config.h
