--- a/testsuite/integration/Makefile.in
+++ b/testsuite/integration/Makefile.in
@@ -86,11 +86,9 @@ NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
 @BUNIT_TEST_LIB_PRESENT_TRUE@check_PROGRAMS =  \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	fwdpp_unit_tests$(EXEEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	extensions_unit_tests$(EXEEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_unit_tests$(EXEEXT)
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_integration_tests$(EXEEXT)
 @BUNIT_TEST_LIB_PRESENT_TRUE@am__append_1 = $(AM_LIBS)
-subdir = testsuite/unit
+subdir = testsuite/integration
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/ax_cxx_compile_stdxx_11.m4 \
 	$(top_srcdir)/configure.ac
@@ -101,39 +99,19 @@ mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
-am__extensions_unit_tests_SOURCES_DIST = extensions_unit_test.cc \
-	extensions_regionsTest.cc extensions_callbacksTest.cc
-@BUNIT_TEST_LIB_PRESENT_TRUE@am_extensions_unit_tests_OBJECTS =  \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	extensions_unit_test.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	extensions_regionsTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	extensions_callbacksTest.$(OBJEXT)
-extensions_unit_tests_OBJECTS = $(am_extensions_unit_tests_OBJECTS)
-extensions_unit_tests_LDADD = $(LDADD)
-am__fwdpp_unit_tests_SOURCES_DIST = fwdpp_unit_tests.cc mutateTest.cc \
-	gameteTest.cc utilTest.cc type_traitsTest.cc \
-	recombinationTest.cc demographyTest.cc siteDepFitnessTest.cc
-@BUNIT_TEST_LIB_PRESENT_TRUE@am_fwdpp_unit_tests_OBJECTS =  \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	fwdpp_unit_tests.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	mutateTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	gameteTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	utilTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	type_traitsTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	recombinationTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	demographyTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	siteDepFitnessTest.$(OBJEXT)
-fwdpp_unit_tests_OBJECTS = $(am_fwdpp_unit_tests_OBJECTS)
-fwdpp_unit_tests_LDADD = $(LDADD)
-am__sugar_unit_tests_SOURCES_DIST = sugar_unit_tests.cc \
-	sugar_GSLrngTest.cc sugar_samplingTest.cc \
-	sugar_add_mutationTest.cc sugar_change_neutralTest.cc
-@BUNIT_TEST_LIB_PRESENT_TRUE@am_sugar_unit_tests_OBJECTS =  \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_unit_tests.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_GSLrngTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_samplingTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_add_mutationTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_change_neutralTest.$(OBJEXT)
-sugar_unit_tests_OBJECTS = $(am_sugar_unit_tests_OBJECTS)
-sugar_unit_tests_LDADD = $(LDADD)
+am__sugar_integration_tests_SOURCES_DIST = sugar_integration_tests.cc \
+	sugar_metapop_custom_diploidTest.cc sugar_metapopTest.cc \
+	sugar_multilocusTest.cc sugar_singlepop_custom_diploidTest.cc \
+	sugar_singlepopTest.cc
+@BUNIT_TEST_LIB_PRESENT_TRUE@am_sugar_integration_tests_OBJECTS = sugar_integration_tests.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_metapop_custom_diploidTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_metapopTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_multilocusTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_singlepop_custom_diploidTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_singlepopTest.$(OBJEXT)
+sugar_integration_tests_OBJECTS =  \
+	$(am_sugar_integration_tests_OBJECTS)
+sugar_integration_tests_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -163,11 +141,8 @@ AM_V_CXXLD = $(am__v_CXXLD_@AM_V@)
 am__v_CXXLD_ = $(am__v_CXXLD_@AM_DEFAULT_V@)
 am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
-SOURCES = $(extensions_unit_tests_SOURCES) $(fwdpp_unit_tests_SOURCES) \
-	$(sugar_unit_tests_SOURCES)
-DIST_SOURCES = $(am__extensions_unit_tests_SOURCES_DIST) \
-	$(am__fwdpp_unit_tests_SOURCES_DIST) \
-	$(am__sugar_unit_tests_SOURCES_DIST)
+SOURCES = $(sugar_integration_tests_SOURCES)
+DIST_SOURCES = $(am__sugar_integration_tests_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -494,14 +469,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 @BUNIT_TEST_LIB_PRESENT_TRUE@TESTS = $(check_PROGRAMS)
-@BUNIT_TEST_LIB_PRESENT_TRUE@fwdpp_unit_tests_SOURCES = fwdpp_unit_tests.cc mutateTest.cc gameteTest.cc utilTest.cc type_traitsTest.cc recombinationTest.cc demographyTest.cc siteDepFitnessTest.cc
-@BUNIT_TEST_LIB_PRESENT_TRUE@extensions_unit_tests_SOURCES = extensions_unit_test.cc extensions_regionsTest.cc extensions_callbacksTest.cc
-@BUNIT_TEST_LIB_PRESENT_TRUE@sugar_unit_tests_SOURCES = sugar_unit_tests.cc \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_GSLrngTest.cc \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_samplingTest.cc \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_add_mutationTest.cc \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_change_neutralTest.cc	
-
+@BUNIT_TEST_LIB_PRESENT_TRUE@sugar_integration_tests_SOURCES = sugar_integration_tests.cc  sugar_metapop_custom_diploidTest.cc  sugar_metapopTest.cc  sugar_multilocusTest.cc  sugar_singlepop_custom_diploidTest.cc  sugar_singlepopTest.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@AM_CXXFLAGS = 
 @BUNIT_TEST_LIB_PRESENT_TRUE@AM_LIBS = -lboost_unit_test_framework
 all: all-am
@@ -517,9 +485,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu testsuite/unit/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu testsuite/integration/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu testsuite/unit/Makefile
+	  $(AUTOMAKE) --gnu testsuite/integration/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
@@ -541,17 +509,9 @@ $(am__aclocal_m4_deps):
 clean-checkPROGRAMS:
 	-test -z "$(check_PROGRAMS)" || rm -f $(check_PROGRAMS)
 
-extensions_unit_tests$(EXEEXT): $(extensions_unit_tests_OBJECTS) $(extensions_unit_tests_DEPENDENCIES) $(EXTRA_extensions_unit_tests_DEPENDENCIES) 
-	@rm -f extensions_unit_tests$(EXEEXT)
-	$(AM_V_CXXLD)$(CXXLINK) $(extensions_unit_tests_OBJECTS) $(extensions_unit_tests_LDADD) $(LIBS)
-
-fwdpp_unit_tests$(EXEEXT): $(fwdpp_unit_tests_OBJECTS) $(fwdpp_unit_tests_DEPENDENCIES) $(EXTRA_fwdpp_unit_tests_DEPENDENCIES) 
-	@rm -f fwdpp_unit_tests$(EXEEXT)
-	$(AM_V_CXXLD)$(CXXLINK) $(fwdpp_unit_tests_OBJECTS) $(fwdpp_unit_tests_LDADD) $(LIBS)
-
-sugar_unit_tests$(EXEEXT): $(sugar_unit_tests_OBJECTS) $(sugar_unit_tests_DEPENDENCIES) $(EXTRA_sugar_unit_tests_DEPENDENCIES) 
-	@rm -f sugar_unit_tests$(EXEEXT)
-	$(AM_V_CXXLD)$(CXXLINK) $(sugar_unit_tests_OBJECTS) $(sugar_unit_tests_LDADD) $(LIBS)
+sugar_integration_tests$(EXEEXT): $(sugar_integration_tests_OBJECTS) $(sugar_integration_tests_DEPENDENCIES) $(EXTRA_sugar_integration_tests_DEPENDENCIES) 
+	@rm -f sugar_integration_tests$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(sugar_integration_tests_OBJECTS) $(sugar_integration_tests_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -559,22 +519,12 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/demographyTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/extensions_callbacksTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/extensions_regionsTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/extensions_unit_test.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fwdpp_unit_tests.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gameteTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mutateTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/recombinationTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/siteDepFitnessTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_GSLrngTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_add_mutationTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_change_neutralTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_samplingTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_unit_tests.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/type_traitsTest.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/utilTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_integration_tests.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_metapopTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_metapop_custom_diploidTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_multilocusTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_singlepopTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po@am__quote@
 
 .cc.o:
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
@@ -783,23 +733,9 @@ recheck: all $(check_PROGRAMS)
 	        am__force_recheck=am--force-recheck \
 	        TEST_LOGS="$$log_list"; \
 	exit $$?
-fwdpp_unit_tests.log: fwdpp_unit_tests$(EXEEXT)
-	@p='fwdpp_unit_tests$(EXEEXT)'; \
-	b='fwdpp_unit_tests'; \
-	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
-	--log-file $$b.log --trs-file $$b.trs \
-	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
-	"$$tst" $(AM_TESTS_FD_REDIRECT)
-extensions_unit_tests.log: extensions_unit_tests$(EXEEXT)
-	@p='extensions_unit_tests$(EXEEXT)'; \
-	b='extensions_unit_tests'; \
-	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
-	--log-file $$b.log --trs-file $$b.trs \
-	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
-	"$$tst" $(AM_TESTS_FD_REDIRECT)
-sugar_unit_tests.log: sugar_unit_tests$(EXEEXT)
-	@p='sugar_unit_tests$(EXEEXT)'; \
-	b='sugar_unit_tests'; \
+sugar_integration_tests.log: sugar_integration_tests$(EXEEXT)
+	@p='sugar_integration_tests$(EXEEXT)'; \
+	b='sugar_integration_tests'; \
 	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
