new unit test file added

--- a/testsuite/unit/Makefile.am
+++ b/testsuite/unit/Makefile.am
@@ -5,7 +5,7 @@ check_PROGRAMS=fwdpp_unit_tests extensions_unit_tests sugar_unit_tests
 
 TESTS=$(check_PROGRAMS)
 
-fwdpp_unit_tests_SOURCES=fwdpp_unit_tests.cc mutateTest.cc gameteTest.cc utilTest.cc type_traitsTest.cc recombinationTest.cc demographyTest.cc siteDepFitnessTest.cc
+fwdpp_unit_tests_SOURCES=fwdpp_unit_tests.cc mutateTest.cc gameteTest.cc utilTest.cc type_traitsTest.cc recombinationTest.cc demographyTest.cc siteDepFitnessTest.cc serializationTest.cc
 extensions_unit_tests_SOURCES=extensions_unit_test.cc extensions_regionsTest.cc extensions_callbacksTest.cc
 sugar_unit_tests_SOURCES=sugar_unit_tests.cc \
 	sugar_GSLrngTest.cc \
