--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -148,13 +148,14 @@ unit_fwdpp_unit_tests_LDADD = $(LDADD)
 am__unit_sugar_unit_tests_SOURCES_DIST = unit/sugar_unit_tests.cc \
 	unit/sugar_GSLrngTest.cc unit/sugar_samplingTest.cc \
 	unit/sugar_add_mutationTest.cc \
-	unit/sugar_change_neutralTest.cc
+	unit/sugar_change_neutralTest.cc unit/sugar_generalmutTest.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@am_unit_sugar_unit_tests_OBJECTS =  \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_unit_tests.$(OBJEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_GSLrngTest.$(OBJEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_samplingTest.$(OBJEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_add_mutationTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_change_neutralTest.$(OBJEXT)
+@BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_change_neutralTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_generalmutTest.$(OBJEXT)
 unit_sugar_unit_tests_OBJECTS = $(am_unit_sugar_unit_tests_OBJECTS)
 unit_sugar_unit_tests_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
@@ -529,7 +530,8 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_GSLrngTest.cc \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_samplingTest.cc \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_add_mutationTest.cc \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_change_neutralTest.cc	
+@BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_change_neutralTest.cc \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_generalmutTest.cc
 
 
 #Integration test targets:
@@ -647,6 +649,8 @@ unit/sugar_add_mutationTest.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
 unit/sugar_change_neutralTest.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
+unit/sugar_generalmutTest.$(OBJEXT): unit/$(am__dirstamp) \
+	unit/$(DEPDIR)/$(am__dirstamp)
 
 unit/sugar_unit_tests$(EXEEXT): $(unit_sugar_unit_tests_OBJECTS) $(unit_sugar_unit_tests_DEPENDENCIES) $(EXTRA_unit_sugar_unit_tests_DEPENDENCIES) unit/$(am__dirstamp)
 	@rm -f unit/sugar_unit_tests$(EXEEXT)
@@ -679,6 +683,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_GSLrngTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_add_mutationTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_change_neutralTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_generalmutTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_samplingTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/sugar_unit_tests.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/type_traitsTest.Po@am__quote@
