--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -132,7 +132,7 @@ am__unit_fwdpp_unit_tests_SOURCES_DIST = unit/fwdpp_unit_tests.cc \
 	unit/mutateTest.cc unit/gameteTest.cc unit/utilTest.cc \
 	unit/type_traitsTest.cc unit/recombinationTest.cc \
 	unit/demographyTest.cc unit/siteDepFitnessTest.cc \
-	unit/serializationTest.cc
+	unit/serializationTest.cc unit/ms_samplingTest.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@am_unit_fwdpp_unit_tests_OBJECTS =  \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/fwdpp_unit_tests.$(OBJEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/mutateTest.$(OBJEXT) \
@@ -142,7 +142,8 @@ am__unit_fwdpp_unit_tests_SOURCES_DIST = unit/fwdpp_unit_tests.cc \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/recombinationTest.$(OBJEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/demographyTest.$(OBJEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/siteDepFitnessTest.$(OBJEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	unit/serializationTest.$(OBJEXT)
+@BUNIT_TEST_LIB_PRESENT_TRUE@	unit/serializationTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	unit/ms_samplingTest.$(OBJEXT)
 unit_fwdpp_unit_tests_OBJECTS = $(am_unit_fwdpp_unit_tests_OBJECTS)
 unit_fwdpp_unit_tests_LDADD = $(LDADD)
 am__unit_sugar_unit_tests_SOURCES_DIST = unit/sugar_unit_tests.cc \
@@ -526,7 +527,7 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_LIB_PRESENT_TRUE@TESTS = $(check_PROGRAMS)
 
 #Unit test targets:
-@BUNIT_TEST_LIB_PRESENT_TRUE@unit_fwdpp_unit_tests_SOURCES = unit/fwdpp_unit_tests.cc unit/mutateTest.cc unit/gameteTest.cc unit/utilTest.cc unit/type_traitsTest.cc unit/recombinationTest.cc unit/demographyTest.cc unit/siteDepFitnessTest.cc unit/serializationTest.cc
+@BUNIT_TEST_LIB_PRESENT_TRUE@unit_fwdpp_unit_tests_SOURCES = unit/fwdpp_unit_tests.cc unit/mutateTest.cc unit/gameteTest.cc unit/utilTest.cc unit/type_traitsTest.cc unit/recombinationTest.cc unit/demographyTest.cc unit/siteDepFitnessTest.cc unit/serializationTest.cc unit/ms_samplingTest.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@unit_extensions_unit_tests_SOURCES = unit/extensions_unit_test.cc unit/extensions_regionsTest.cc unit/extensions_callbacksTest.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@unit_sugar_unit_tests_SOURCES = unit/sugar_unit_tests.cc \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	unit/sugar_GSLrngTest.cc \
@@ -638,6 +639,8 @@ unit/siteDepFitnessTest.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
 unit/serializationTest.$(OBJEXT): unit/$(am__dirstamp) \
 	unit/$(DEPDIR)/$(am__dirstamp)
+unit/ms_samplingTest.$(OBJEXT): unit/$(am__dirstamp) \
+	unit/$(DEPDIR)/$(am__dirstamp)
 
 unit/fwdpp_unit_tests$(EXEEXT): $(unit_fwdpp_unit_tests_OBJECTS) $(unit_fwdpp_unit_tests_DEPENDENCIES) $(EXTRA_unit_fwdpp_unit_tests_DEPENDENCIES) unit/$(am__dirstamp)
 	@rm -f unit/fwdpp_unit_tests$(EXEEXT)
@@ -681,6 +684,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/extensions_unit_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/fwdpp_unit_tests.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/gameteTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/ms_samplingTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/mutateTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/recombinationTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/serializationTest.Po@am__quote@
